crates/mermaid-text/tests/regression_corpus/snapshots/er_customer_order_schema.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---
                         places
┌───────────────────┐              ┌───────────────────────────┐
│     CUSTOMER      ┤1────────────*├           ORDER           ┤1┐
├───────────────────┤              ├───────────────────────────┤ │
│  string name      │              │  int    orderNumber   PK  │ │
│  string email PK  │              │  date   orderDate         │ │
└───────────────────┘              │  string customerEmail FK  │ │
                                   └───────────────────────────┘ │
                                                        contains │
                                                                 │
                                                                 │
┌───────────────────────┐                                        │
│       LINE-ITEM       ├+                                       ┘
├───────────────────────┤
│  string productCode   │
│  int    quantity      │
│  float  unitPrice     │
└───────────────────────┘
