crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_all_edge_variants.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: natural
---


          ┌───┐
      ┌──▸│ B │
      │   └───┘
      │
      │
      │
      │   ┌───┐
     ┌┼┄┄▸│ C │
     ┆│   └───┘
     ┆│
     ┆│
     ┆│
     ┆│   ┌───┐
     ┆│  ▸│ D │
     ┆│  ┃└───┘
     ┆│  ┃
     ┆│  ┃
     ┆│  ┃
┌───┐┗┻━━┛┌───┐
│ A │─────│ E │
└───┘◂┬──┐└───┘
     ││  │
     ││  │
     ││  │
     ││  │┌───┐
     ││  ▸│ F │
     ││   └───┘
     ││
     ││
     ││
     ││   ┌───┐
     └┼──○│ G │
      │   └───┘
      │
      │
      │
      │   ┌───┐
      └──×│ H │
          └───┘
