crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_all_edge_variants.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---


          ┌───┐
      ┌──▸│ B │
      │   └───┘
      │
      │
      │
      │   ┌───┐
     ┌┼┄┄▸│ C │
     ┆│   └───┘
     ┆│
     ┆│
     ┆│
     ┆│   ┌───┐
     ┆│  ▸│ D │
     ┆│  ┃└───┘
     ┆│  ┃
     ┆│  ┃
     ┆│  ┃
┌───┐┗┻━━┛┌───┐
│ A │─────│ E │
└───┘◂┬──┐└───┘
     ││  │
     ││  │
     ││  │
     ││  │┌───┐
     ││  ▸│ F │
     ││   └───┘
     ││
     ││
     ││
     ││   ┌───┐
     └┼──○│ G │
      │   └───┘
      │
      │
      │
      │   ┌───┐
      └──×│ H │
          └───┘
