crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_app_db_architecture.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
expression: constrained
---


            ╭───────╮
            │ ───── │
           ▸│ Redis │
           │╰───────╯
           │                 ┌────────┐
           │                ▸│ Worker │────┐
          ┌┼───────────────┐│└────────┘    │╭────────────╮
┌─────┐───┘│╭──────────╮   ││              ││ ────────── │
│ App │────┘│ ──────── │   └┼──────────────▸│ PostgreSQL │
└─────┘────▸│ RabbitMQ │────┘              ▸╰────────────╯
            ╰──────────╯
