crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_back_edge_lr.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
          ┌───┐
         ▸│ B │────┐
         │└───┘    │
┌───┐    │         │┌───┐
│ A │────┘         ▸│ C │
└─▴─┘               └─┬─┘
  └───────────────────┘
